Updated SparseSVMFunction and added basic implementation of SparseSVM Class
Updated SparseSVMFunction and added basic implementation of SparseSVM Class.

List of changes:

1) Moved the code for `sparse_svm_function.hpp` and `sparse_svm_function_impl.hpp`under the mlpack namespace.
2) Fixed missing dependency issue for `MakeAlias` and `ShuffleData` in `sparse_svm_function_impl.hpp`.
3) Added `EvaluateWithGradient()` for `SparseSVMFunction` class.
4) Added a basic starter code for `SparseSVM` class.
fixed syntax issues


fixed syntax issues


fixed syntax issues


fixed inconsistency in optimizer type


fixed some inconsistency 


updated SparseSVM::Classify and added  SparseSVM::ComputeAccuracy()


updated SparseSVM::Classify() and added SparseSVM::ComputeAccuracy().

List of changes.

- updated `SparseSVM::Classify()`.
- added `SparseSVM::ComputeAccuracy()`.
- removed `SparseSVM::FeatureSize()` since `parameters` is a concatenated vector of `w` and `b`.
- added `sparse_svm.hpp` and `sparse_svm.cpp` to `../sparse_svm/CMakeLists.txt`.
fixed SparseSVMFunction::Evaluate() and  fixed an issue in SparseSVM::Classify() (#21)

* fixed SparseSVMFunction::Evaluate()

Updated the function definition for `SparseSVMFunction::Evaluate()` and `SparseSVMFunction::EvaluateWithGradient()` and used arma::clamp().

* fixed an issue in SparseSVM::Classify()

The issue was related to typecasting. The parameter inside `arma::size()` should have the same type as that of `labels`.

Updated SparseSVMFunction::Evaluate() and SparseSVMFunction::Gradient().


First Small Test for class SparseSVMFunction


Fixed Syntax issue and some other issue.


Added SparseSVMFunctionRandomEvaluate test.


test: SparseSVMFunctionGradient


added sparse_svm_impl.hpp


Templatized SparseSVM and SparseSVMFunction.


Updated implementation of SparseSVMFunction.

This takes into account the fact that labels is of type `arma::Row<size_t>` and converts it into appropriate type for the calculation of hin

--- a/src/mlpack/methods/sparse_svm/CMakeLists.txt
+++ b/src/mlpack/methods/sparse_svm/CMakeLists.txt
@@ -2,6 +2,8 @@
 # Anything not in this list will not be compiled into the output library
 # Do not include test programs here
 set(SOURCES
+  sparse_svm.hpp
+  sparse_svm_impl.hpp
   sparse_svm_function.hpp
   sparse_svm_function_impl.hpp
 )
