--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(mlpack_test
   lars_test.cpp
   lin_alg_test.cpp
   linear_regression_test.cpp
+  linear_svm_test.cpp
   lmnn_test.cpp
   load_save_test.cpp
   local_coordinate_coding_test.cpp
@@ -96,7 +97,6 @@ add_executable(mlpack_test
   sort_policy_test.cpp
   sparse_autoencoder_test.cpp
   sparse_coding_test.cpp
-  sparse_svm_test.cpp
   spill_tree_test.cpp
   split_data_test.cpp
   svd_batch_test.cpp
