--- a/src/mlpack/methods/linear_svm/CMakeLists.txt
+++ b/src/mlpack/methods/linear_svm/CMakeLists.txt
@@ -2,10 +2,10 @@
 # Anything not in this list will not be compiled into the output library
 # Do not include test programs here
 set(SOURCES
-  sparse_svm.hpp
-  sparse_svm_impl.hpp
-  sparse_svm_function.hpp
-  sparse_svm_function_impl.hpp
+  linear_svm.hpp
+  linear_svm_impl.hpp
+  linear_svm_function.hpp
+  linear_svm_function_impl.hpp
 )
 
 # add directory name to sources
