--- a/src/mlpack/methods/linear_svm/CMakeLists.txt
+++ b/src/mlpack/methods/linear_svm/CMakeLists.txt
@@ -11,8 +11,12 @@ set(SOURCES
 # add directory name to sources
 set(DIR_SRCS)
 foreach(file ${SOURCES})
-    set(DIR_SRCS ${DIR_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
+  set(DIR_SRCS ${DIR_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
 endforeach()
 # append sources (with directory name) to list of all mlpack sources (used at
 # the parent scope)
 set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
+
+add_cli_executable(linear_svm)
+add_python_binding(linear_svm)
+add_markdown_docs(linear_svm "cli;python" "classification")
