--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -123,6 +123,7 @@ add_executable(mlpack_test
   main_tests/decision_stump_test.cpp
   main_tests/kde_test.cpp
   main_tests/linear_regression_test.cpp
+  main_tests/linear_svm_test.cpp
   main_tests/logistic_regression_test.cpp
   main_tests/lmnn_test.cpp
   main_tests/lsh_test.cpp
